--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea/
 
 # Generated files
 .idea/**/contentModel.xml
@@ -116,7 +112,7 @@ fabric.properties
 hs_err_pid*
 
 ### Gradle ###
-.gradle
+.gradle/
 build/
 
 # Ignore Gradle GUI config
